--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
 </head>
 <body>
     <header>
+        <nav class="nav container">
+            <div class="menu_logo">
+                <h1>Ma <span class="special_letter">r</span>y</h1>
+
+            </div>
+            <div class="menu_items">
+
+            </div>
+
+        </nav>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
