--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-        <nav class="nav container">
-            <div class="menu_logo">
-                <h1>Ma <span class="special_letter">r</span>y</h1>
+        <nav class="nav_container">
+            <div class="nav_title">
+                <h3>Ma<span class="letter_r">r</span>y</h3>
 
             </div>
-            <div class="menu_items">
+            <div class="menus">
+                <ul class="menu_items">
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href=""><button class="btn_primary">Hire Me</button></a></li>
+                </ul>
 
             </div>
 
