--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="main_container">
+        <!-- Nav Started-->
+      
         <nav class="nav_container">
             <div class="nav_title">
                 <h3>Ma<span class="letter_r">r</span>y</h3>
@@ -27,9 +29,26 @@
             </div>
 
         </nav>
+        <!-- Nav Ended-->
+        <section class="banner_container">
+            <div class="banner_content">
+                <h3 class="banner_greeding">Hi, I  am</h3>
+                <h1 class="banner_title">Mary Hardy</h1>
+                <p class="banner_description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn_primary">Download CV</button>
+                <button class="btn_primary">Contact</button>
+
+            </div>
+            <div >
+                <img class="banner_img" src="images/hardy.png" alt="">
+            </div>
+
+
+        </section>
 
     </header>
     <main>
+
 
     </main>
     <footer>
