--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     </header>
     <main class="main_container">
+        <!--About Section Started-->
         <section class="about_container">
             <h3 class="section_title">About Me</h3>
             <p class="section_description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -70,6 +71,38 @@
                 </div>
             </div>
         </section>
+        <!-- About Section Ended-->
+
+
+        <!-- What I Do Section Started-->
+        <section class="What_i_do_container">
+            <h3 class="section_title">What I Do</h3>
+            <p id="what_i_do_description" class="section_description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="skills_container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill_title">Vanilla JavaScript</h3>
+                    <p class="skill_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill_title">React</h3>
+                    <p class="skill_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill_title">Node.js</h3>
+                    <p class="skill_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill_title">MongoDB</h3>
+                    <p class="skill_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- What I Do Section Ended-->
 
 
     </main>
