--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p id="what_i_do_description" class="section_description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="skills_container">
                 <div class="skill">
-                    <img src="images/icons/js.png" alt="">
+                    <img class="skill_pic" src="images/icons/js.png" alt="">
                     <h3 class="skill_title">Vanilla JavaScript</h3>
                     <p class="skill_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
@@ -103,6 +103,59 @@
         </section>
 
         <!-- What I Do Section Ended-->
+
+        <!-- Resume Section started -->
+        <section>
+            <h3 class="section_title">A Summary of My Resume </h3>
+            <div class="resume_container">
+                <div class="resume_colum">
+                    <h3 class="resume_colum_title">My Education</h3>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">Master in Computer Engineering</h2>
+                        <h3 class="resume_item_institue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">Master in Computer Engineering</h2>
+                        <h3 class="resume_item_institue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">Master in Computer Engineering</h2>
+                        <h3 class="resume_item_institue">Harvard University / 2015 - 2017</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume_colum">
+                    <h3 class="resume_colum_title">My Experience</h3>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">Sr. Font End Developer</h2>
+                        <h3 class="resume_item_institue">Apple Inc / 2020 - Current</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">Jr. Font End Developer</h2>
+                        <h3 class="resume_item_institue">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume_item">
+                        <h2 class="resume_item_ttle">HTML Developer</h2>
+                        <h3 class="resume_item_institue">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume_item_description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
