--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                     </div>
                 </div>
             </div>
+            <div class="download_cv">
+                <button class="btn_primary">Download CV</button>
+            </div>
         </section>
 
 
